Disabled numeric aggregations and filters for now (timepointhr and hitc)
