# Swagger.yaml
@@ -65,7 +65,7 @@ paths:
         - $ref: '#/parameters/IntendedTargetTypeFilter'
         - $ref: '#/parameters/OrganismFilter'
         - $ref: '#/parameters/TechnologicalTargetTypeFilter'
-        - $ref: '#/parameters/TimepointHrFilter'
+#        - $ref: '#/parameters/TimepointHrFilter'
         - $ref: '#/parameters/TissueFilter'
         
       responses:
@@ -106,10 +106,10 @@ paths:
         - $ref: '#/parameters/IntendedTargetTypeFilter'
         - $ref: '#/parameters/OrganismFilter'
         - $ref: '#/parameters/TechnologicalTargetTypeFilter'
-        - $ref: '#/parameters/TimepointHrFilter'
+#        - $ref: '#/parameters/TimepointHrFilter'
         - $ref: '#/parameters/TissueFilter'
 
-        - $ref: '#/parameters/HitcFilter'
+#        - $ref: '#/parameters/HitcFilter'
       responses:
         200:
           description: "A list of results with associated compound and assay data. Aggregations for faceted navigation."
@@ -377,8 +377,8 @@ definitions:
         $ref: '#/definitions/Aggregation'
       technologicalTargetTypeSub:
         $ref: '#/definitions/Aggregation'
-      timepointHr:
-        $ref: '#/definitions/Aggregation'
+      #timepointHr:
+      #  $ref: '#/definitions/Aggregation'
       tissue:
         $ref: '#/definitions/Aggregation'
   Assay:
@@ -767,12 +767,12 @@ definitions:
         $ref: '#/definitions/Aggregation'
       technologicalTargetTypeSub:
         $ref: '#/definitions/Aggregation'
-      timepointHr:
-        $ref: '#/definitions/Aggregation'
+      #timepointHr:
+      #  $ref: '#/definitions/Aggregation'
       tissue:
         $ref: '#/definitions/Aggregation'
-      hitc:
-        $ref: '#/definitions/Aggregation'
+      #hitc:
+      #  $ref: '#/definitions/Aggregation'
   Result:
     type: object
     properties:
